recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:4: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
  } else return Nil::l.head::nfirst(l.tail, n-1)
                   ^